atualizações de links

--- a/item_produto.html
+++ b/item_produto.html
@@ -146,35 +146,32 @@
   <section class="wd-section-project-page">
     <div class="row animation-parent" data-animation-delay="100">
       <div class="row">
-        <h4 class="m-b-15">RELATED PROJECTS</h4>
+        <h4 class="m-b-15">PRODUTOS RELACIONADO</h4>
         <div class="wd-section-project">
           <ul class="masque portfolio-grid small-block-grid-1  medium-block-grid-3 large-block-grid-4">
             <li class="flipInX" data-animated="flipInX" style="opacity: 1; animation-delay: 0ms;">
               <div class="wd-project hvr-underline-from-center">
                 <img width="380" height="254" src="http://via.placeholder.com/380x254" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                <a href="single-portfolio.html"><h4>Swedish Mega Project</h4></a>
-                <p> DESIGN<span>- </span>  INTERIOR<span>- </span>  OFFICE<span>- </span> </p>
+                <a href="single-portfolio.html"><h4>PRODUTO</h4></a>
               </div>
             </li>
             <li class="flipInX" data-animated="flipInX" style="opacity: 1; animation-delay: 100ms;">
               <div class="wd-project hvr-underline-from-center">
                 <img width="380" height="254" src="http://via.placeholder.com/380x254" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                <a href="single-portfolio.html"><h4>So to deliberately render</h4></a>
-                <p> DESIGN<span>- </span>  INTERIOR<span>- </span>  OFFICE<span>- </span> </p>
+                <a href="single-portfolio.html"><h4>PRODUTO</h4></a>
               </div>
             </li>
             <li class="flipInX" data-animated="flipInX" style="opacity: 1; animation-delay: 200ms;">
               <div class="wd-project hvr-underline-from-center">
                 <img width="380" height="254" src="http://via.placeholder.com/380x254" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                <a href="single-portfolio.html"><h4>Frozen Trees In A Lake</h4></a>
-                <p> DESIGN<span>- </span>  INTERIOR<span>- </span>  OFFICE<span>- </span> </p>
+                <a href="single-portfolio.html"><h4>PRODUTO</h4></a>
               </div>
             </li>
             <li class="flipInX" data-animated="flipInX" style="opacity: 1; animation-delay: 300ms;">
               <div class="wd-project hvr-underline-from-center">
                 <img width="380" height="254" src="http://via.placeholder.com/380x254" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                <a href="single-portfolio.html"><h4>Consectetur adipiscing</h4></a>
-                <p> DESIGN<span>- </span>  INTERIOR<span>- </span>  OFFICE<span>- </span> </p>
+                <a href="single-portfolio.html"><h4>PRODUTO</h4></a>
+                <p><span> - </span>ALFASUPORTEL<span>- </span></p>
               </div>
             </li>
           </ul>
