--- a/linhasdeprodutos.html
+++ b/linhasdeprodutos.html
@@ -108,7 +108,7 @@
     <section class="wd-title-bar">
       <div class="row">
         <div class="large-12 columns p-t-70 text-left">
-          <h2 id="page-title" class="title">Portfolio Two Columns</h2>
+          <h2 id="page-title" class="title">LINHA DE PRODUTOS</h2>
         </div>
       </div>
     </section>
@@ -121,8 +121,7 @@
       <div class="row">
         <div class="small-12 large-8 large-offset-2 columns">
           <div class="wd-title-section_c">
-            <h2>Portfolio two columns</h2>
-            <h5>Neque porro quisquam est qui dolorem ipsum quia lorem ipsum dolor sit amet dolor sit amet, consectetur, adipisci velit</h5>
+            <h2>LINHAS DE PRODUTOS</h2>
           </div>
         </div>
       </div>
