--- a/subcategoria.html
+++ b/subcategoria.html
@@ -119,7 +119,6 @@
         <div class="small-12 large-8 large-offset-2 columns">
           <div class="wd-title-section_c">
             <h2>Subcategorias</h2>
-            <h5>Neque porro quisquam est qui dolorem ipsum quia lorem ipsum dolor sit amet dolor sit amet, consectetur, adipisci velit</h5>
           </div>
         </div>
       </div>
@@ -131,7 +130,7 @@
                 <div class="image-wrapper overlay-slide-in-left">
                   <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
                   <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>Swedish Mega Project</h2></a>
+                    <a href="single-portfolio.html"><h2>CHURRASQUEIRA</h2></a>
                   </div>
                 </div>
               </li>
@@ -139,7 +138,7 @@
                 <div class="image-wrapper overlay-slide-in-left">
                   <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
                   <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>So to deliberately render</h2></a>
+                    <a href="single-portfolio.html"><h2>FRRITADEIRAS</h2></a>
                   </div>
                 </div>
               </li>
@@ -147,16 +146,7 @@
                 <div class="image-wrapper overlay-slide-in-left">
                   <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
                   <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>Frozen Trees In A Lake</h2></a>
-                  </div>
-                </div>
-
-              </li>
-              <li>
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>Consectetur adipiscing</h2></a>
+                    <a href="single-portfolio.html"><h2>FOGOES</h2></a>
                   </div>
                 </div>
 
@@ -165,7 +155,16 @@
                 <div class="image-wrapper overlay-slide-in-left">
                   <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
                   <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>Consectetur adipiscing</h2></a>
+                    <a href="single-portfolio.html"><h2>GRELHAS</h2></a>
+                  </div>
+                </div>
+
+              </li>
+              <li>
+                <div class="image-wrapper overlay-slide-in-left">
+                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
+                  <div class="image-overlay-content">
+                    <a href="single-portfolio.html"><h2>ESPETOS</h2></a>
                   </div>
                 </div>
               </li>
@@ -173,7 +172,7 @@
                 <div class="image-wrapper overlay-slide-in-left">
                   <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
                   <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>Consectetur adipiscing</h2></a>
+                    <a href="single-portfolio.html"><h2>FORNO </h2></a>
                   </div>
                 </div>
               </li>
@@ -181,7 +180,7 @@
                 <div class="image-wrapper overlay-slide-in-left">
                   <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
                   <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>Consectetur adipiscing</h2></a>
+                    <a href="single-portfolio.html"><h2>FOGAO</h2></a>
                   </div>
                 </div>
               </li>
@@ -189,7 +188,7 @@
                 <div class="image-wrapper overlay-slide-in-left">
                   <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
                   <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>Consectetur adipiscing</h2></a>
+                    <a href="single-portfolio.html"><h2>CHAPEIRAS</h2></a>
                   </div>
                 </div>
               </li>
