formato 4 colunas on news

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 							</li>	
 							<li id="menu-item-1308">
 								<a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
-							</li>
+							</li>              
 						</ul>
 					</div>
 				</section>
-			</nav>
-		</div>
-	</header>
+		</nav>
+	</div>
+</header>
 
 <!-- End Header -->
 
@@ -276,18 +276,18 @@
 
 <!-- Start Latest News -->
 
-<section class="latest-news">
+<section class="latest-news" style="large-block-grid-3">
 	<div class="row">
 		<div class="small-12 large-8 large-offset-2 columns">
 			<div class="wd-title-section_c">
-				<h2>Nossas últimas notícias</h2>
+				<h2>Novidades</h2>
 				<h5>veja ultimas novidade de linha de produtos</h5>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="small-12 large-12 columns">
-			<ul class="simple-blog small-block-grid-1 medium-block-grid-2 large-block-grid-3">
+			<ul class="simple-blog small-block-grid-1 medium-block-grid-2 large-block-grid-4">
 				<li>
 					<div class="wd-latest-news hvr-underline-from-center animated fadeInUp" data-animated="fadeInUp">
 						<div class="wd-image-date">
@@ -295,23 +295,21 @@
 						</div>
 						<h4 class="wd-title-element"><a href="single-blog.html">Acendedor de carvão para Narguilé</a></h4>
 						<p>
-							Agilidade e segurança para acender o carvão de fibra de coco do seu Narguilé.Não deixe que a falta de um equipamento adequado coloque em risco um momento de diversão com a família e amigos. 
 							<a class="hvr-pop read-more" href="single-blog.html">Mais Sobre  →</a>
 						</p>
 					</div>
 				</li>
-				<li>
-					<div class="wd-latest-news hvr-underline-from-center animated fadeInUp" data-animated="fadeInUp">
-						<div class="wd-image-date">
-							<img width="368" height="193" src="images/ultimas noticias/dirtysteak.jpg"" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>05</strong>Fev</span>
-						</div>
-						<h4 class="wd-title-element"><a href="single-blog.html">Dirty Steak</a></h4>
-						<p>
-							Já ouviu falar de darty steak?<p> é o cozimento sobre as brasas</p>
-							<a class="hvr-pop read-more" href="single-blog.html">Mais Sobre→</a>
-						</p>
-					</div>
-				</li>
+        <li>
+          <div class="wd-latest-news hvr-underline-from-center animated fadeInUp" data-animated="fadeInUp">
+            <div class="wd-image-date">
+              <img width="368" height="193" src="images/ultimas noticias/dirtysteak.jpg"" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>05</strong>Fev</span>
+            </div>
+            <h4 class="wd-title-element"><a href="single-blog.html">Dirty Steak</a></h4>
+            <p>
+              <a class="hvr-pop read-more" href="single-blog.html">Mais Sobre→</a>
+            </p>
+          </div>
+        </li>
 				<li>
 					<div class="wd-latest-news hvr-underline-from-center animated fadeInUp" data-animated="fadeInUp">
 						<div class="wd-image-date">
@@ -319,15 +317,21 @@
 						</div>
 						<h4 class="wd-title-element"><a href="single-blog.html">Carvão Premium</a></h4>
 						<p>
-							Olha a galera pedindo Fulkan Coco Hexagonal
-							<br>
-							<br>
-							<br>
-							<br>
 							<a class="hvr-pop read-more" href="single-blog.html">Mais Sobre  →</a>
 						</p>
 					</div>
 				</li>
+        <li>
+          <div class="wd-latest-news hvr-underline-from-center animated fadeInUp" data-animated="fadeInUp">
+            <div class="wd-image-date">
+              <img width="368" height="193" src="images/ultimas noticias/dirtysteak.jpg"" class="attachment-flooring_blog size-flooring_blog wp-post-image" alt="">              <span><strong>05</strong>Fev</span>
+            </div>
+            <h4 class="wd-title-element"><a href="single-blog.html">Dirty Steak</a></h4>
+            <p>
+              <a class="hvr-pop read-more" href="single-blog.html">Mais Sobre→</a>
+            </p>
+          </div>
+        </li>
 			</ul>
 		</div>
 	</div>
