melhorias menu e identação

--- a/categorias.html
+++ b/categorias.html
@@ -42,7 +42,7 @@
             <div class="menu-main-menu-container">  
               <ul id="menu-main-menu" class="menu">
                 <li id="menu-item-1299" class="has-dropdown not-click">
-                  <a href="linhasdeprodutos.html" class="has-icon">LINHA DE PRODUTOS</a>
+                  <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
                   <ul class="sub-menu dropdown">
                     <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
                     <li id="menu-item-1300" class="has-dropdown not-click">
