atualizações dos links

--- a/linhasdeprodutos.html
+++ b/linhasdeprodutos.html
@@ -23,41 +23,62 @@
 
     <!-- Start Header -->
 
-
-  <header class="l-header creative-layout">
-    <div class="top-bar-container contain-to-grid sticky">
-      <nav class="top-bar" data-topbar="">
-        <ul class="title-area">
-          <li class="name">
-            <h1>
-              <a title="alfasuportel" rel="home" href="index.html" pa>
-                <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
-              </a>
-            </h1>
-          </li>
-          <li class="toggle-topbar menu-icon">
-            <a href="#"><span>Menu</span></a>
-          </li>
-        </ul>
-        <section class="creative top-bar-section right">
-          <div class="menu-main-menu-container">  
-            <ul id="menu-main-menu" class="menu">
-              <li id="menu-item-1299" class="has-dropdown not-click">
-                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
-                <ul class="sub-menu dropdown">
-                  <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
-                    <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
-                    <ul class="sub-menu dropdown">
-                      <li id="menu-item-1316" ng-repeat="item in subcategorias">
-                          <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+    <header class="l-header creative-layout">
+      <div class="top-bar-container contain-to-grid sticky">
+        <nav class="top-bar" data-topbar="">
+          <ul class="title-area">
+            <li class="name">
+              <h1>
+                <a title="alfasuportel" rel="home" href="index.html" pa>
+                  <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
+                </a>
+              </h1>
+            </li>
+            <li class="toggle-topbar menu-icon">
+              <a href="#"><span>Menu</span></a>
+            </li>
+          </ul>
+          <section class="creative top-bar-section right">
+            <div class="menu-main-menu-container">  
+              <ul id="menu-main-menu" class="menu">
+                <li id="menu-item-1299" class="has-dropdown not-click">
+                  <a href="linhasdeprodutos.html" class="has-icon">LINHA DE PRODUTOS</a>
+                  <ul class="sub-menu dropdown">
+                    <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
+                    <li id="menu-item-1300" class="has-dropdown not-click">
+                      <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
+                      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
+                        <li id="menu-item-1316">
+                          <a href="categoria.html" class="has-icon">CATEGORIAS</a>
+                        </li>
+                        <li id="menu-item-1316">
+                          <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5>
+                          </li>                    
+                          <a href="categoria.html" class="has-icon">CATEGORIAS</a>
+                        </ul>
                       </li>
                     </ul>
                   </li>
+                  <li id="menu-item-1301" class="has-dropdown not-click">
+                    <a href="subcategoria.html" class="has-icon">FULCAN</a>
+                    <ul class="sub-menu dropdown">
+                      <li class="title back js-generated">
+                        <h5>
+                          <a href="javascript:void(0)">Back</a>
+                        </h5>
+                      </li>
+                      <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
+                      <li id="menu-item-1319">
+                        <a href="categoria.html" class="" ass="has-icon">CATEGORIAS</a>
+                      </li>
+                    </ul>
+                  </li>
+
                 </ul>
               </li>
               <li id="menu-item-1295" class="has-dropdown not-click">
                 <a href="catalogo.html" class="has-icon">PAGINAS</a>
-                <ul class="sub-menu dropdown">
+                <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">PAGINAS</a></li>
                   <li id="menu-item-1309">
                     <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
                   </li>
@@ -65,10 +86,11 @@
                     <a href="contact.html" class="has-icon">CONTATOS</a>
                   </li>
                 </ul>
+
               </li>
               <li id="menu-item-1308">
                 <a href="contact.html" class="has-icon">CONTATOS</a>
-              </li> 
+              </li>
               <li id="menu-item-1308">
                 <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
               </li>              
@@ -86,7 +108,7 @@
     <section class="wd-title-bar">
       <div class="row">
         <div class="large-12 columns p-t-70 text-left">
-          <h2 id="page-title" class="title">LINHA DE PRODUTOS</h2>
+          <h2 id="page-title" class="title">s</h2>
         </div>
       </div>
     </section>
@@ -99,7 +121,8 @@
       <div class="row">
         <div class="small-12 large-8 large-offset-2 columns">
           <div class="wd-title-section_c">
-            <h2>LINHAS DE PRODUTOS</h2>
+            <h2>Portfolio two columns</h2>
+            <h5>Neque porro quisquam est qui dolorem ipsum quia lorem ipsum dolor sit amet dolor sit amet, consectetur, adipisci velit</h5>
           </div>
         </div>
       </div>
