--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -20,6 +20,7 @@
 
   <!-- Start Header -->
 
+ 
   <header class="l-header creative-layout">
     <div class="top-bar-container contain-to-grid sticky">
       <nav class="top-bar" data-topbar="">
@@ -35,6 +36,46 @@
             <a href="#"><span>Menu</span></a>
           </li>
         </ul>
+        <section class="creative top-bar-section right">
+          <div class="menu-main-menu-container">  
+            <ul id="menu-main-menu" class="menu">
+              <li id="menu-item-1299" class="has-dropdown not-click">
+                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
+                    <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
+                    <ul class="sub-menu dropdown">
+                      <li id="menu-item-1316" ng-repeat="item in subcategorias">
+                          <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1295" class="has-dropdown not-click">
+                <a href="catalogo.html" class="has-icon">PAGINAS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1309">
+                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+                  </li>
+                  <li id="menu-item-1308">
+                    <a href="contact.html" class="has-icon">CONTATOS</a>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1308">
+                <a href="contact.html" class="has-icon">CONTATOS</a>
+              </li> 
+              <li id="menu-item-1308">
+                <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+              </li>              
+            </ul>
+          </div>
+        </section>
+      </nav>
+    </div>
+  </header>
+
   <section class="creative top-bar-section right">
     <div class="menu-main-menu-container">  
       <ul id="menu-main-menu" class="menu">
