--- a/item_produto.html
+++ b/item_produto.html
@@ -18,7 +18,7 @@
     <script src="bower_components/angular/angular.js"></script>
 
   </head>
-<body>
+<body ng-controller="itemProdutoController">
 
   <!-- Start Header -->
 
@@ -65,9 +65,6 @@
                   </li>
                 </ul>
               </li>
-              <li id="menu-item-1308">
-                <a href="contact.html" class="has-icon">CONTATOS</a>
-              </li> 
               <li id="menu-item-1308">
                 <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
               </li>              
@@ -243,7 +240,8 @@
   </footer>
 </section>
   <!-- End Footer -->
-
+  <script src="js/angular-controller/item-produto-controller.js"></script>
+  <script src="js/extras.js"></script>
   <script src="js/jquery-1.12.3.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/shortcode/script-shortcodes.js"></script>
