--- a/produtos.html
+++ b/produtos.html
@@ -18,7 +18,7 @@
   <script src="bower_components/angular/angular.js"></script>
 
 </head>
-<body>
+<body ng-controller="produtosController">
 
   <!-- Start Header -->
 
@@ -41,64 +41,38 @@
           <div class="menu-main-menu-container">  
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-1299" class="has-dropdown not-click">
-                <a href="linhasdeprodutos.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
                 <ul class="sub-menu dropdown">
-                  <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
-                  <li id="menu-item-1300" class="has-dropdown not-click">
-                    <a href="subcategoria.html" class="has-icon">ALFASUPORTEL</a>
-                    <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
-                      <li id="menu-item-1316">
-                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
+                  <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
+                    <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
+                    <ul class="sub-menu dropdown">
+                      <li id="menu-item-1316" ng-repeat="item in subcategorias">
+                          <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
                       </li>
-                      <li id="menu-item-1316">
-                        <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5>
-                        </li>                    
-                        <a href="categoria.html" class="has-icon">CATEGORIAS</a>
-                      </ul>
-                    </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1295" class="has-dropdown not-click">
+                <a href="catalogo.html" class="has-icon">PAGINAS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1309">
+                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+                  </li>
+                  <li id="menu-item-1308">
+                    <a href="contact.html" class="has-icon">CONTATOS</a>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1308">
+                <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+              </li>              
             </ul>
-        </li>
-        <li id="menu-item-1301" class="has-dropdown not-click">
-          <a href="subcategoria.html" class="has-icon">FULCAN</a>
-          <ul class="sub-menu dropdown">
-            <li class="title back js-generated">
-              <h5>
-                <a href="javascript:void(0)">Back</a>
-              </h5>
-            </li>
-            <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
-            <li id="menu-item-1319">
-              <a href="categoria.html" class="" ass="has-icon">CATEGORIAS</a>
-            </li>
-          </ul>
-        </li>
-
-      </ul>
-    </li>
-    <li id="menu-item-1295" class="has-dropdown not-click">
-      <a href="catalogo.html" class="has-icon">PAGINAS</a>
-      <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">PAGINAS</a></li>
-        <li id="menu-item-1309">
-          <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
-        </li>
-        <li id="menu-item-1308">
-          <a href="contact.html" class="has-icon">CONTATOS</a>
-        </li>
-      </ul>
-
-    </li>
-    <li id="menu-item-1308">
-      <a href="contact.html" class="has-icon">CONTATOS</a>
-    </li>
-    <li id="menu-item-1308">
-      <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
-    </li>              
-  </ul>
-</div>
-</section>
-</nav>
-</div>
-</header>
+          </div>
+        </section>
+      </nav>
+    </div>
+  </header>
 
 <!-- End Header -->
 
@@ -267,7 +241,8 @@
   </footer>
 </section>
 <!-- End Footer -->
-
+<script src="js/angular-controller/produtos-controller.js"></script>
+<script src="js/extras.js"></script>
 <script src="js/jquery-1.12.3.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/shortcode/script-shortcodes.js"></script>
