atualização de link

--- a/categorias.html
+++ b/categorias.html
@@ -107,7 +107,7 @@
               <li ng-repeat="item in categorias">
                 <div class="wd-project hvr-underline-from-center">
                   <img width="380" height="254" src="http://via.placeholder.com/380x254" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
-                  <a href="single-portfolio.html"><h4>{{ item.descricao_categoria }}</h4></a><br>
+                  <a href="subcategoria.html?categoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a><br>
                 </div>
               </li>
             </ul>
