--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 										<a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
 										<ul class="sub-menu dropdown">
 											<li id="menu-item-1316" ng-repeat="item in subcategorias">
-													<a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+													<a href="item_produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
 											</li>
 										</ul>
 									</li>
