--- a/subcategoria.html
+++ b/subcategoria.html
@@ -15,7 +15,6 @@
   <link rel="stylesheet" href="stylesheets/custom-style.css">
   <link rel="stylesheet" href="stylesheets/header.css">
   <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
-  <script src="bower_components/angular/angular.js"></script>
 </head>
   <body ng-controller="subcategoriaController">
 
@@ -81,8 +80,8 @@
 
     <section class="wd-title-bar">
       <div class="row">
-        <div class="large-12 columns p-t-70 text-left">
-          <h2 id="page-title" class="title">{{ asd }}</h2>
+        <div class="large-12 columns p-t-70 text-left title-banner">
+          <h2 id="page-title" class="title">{{ titulo }}</h2>
         </div>
       </div>
     </section>
@@ -103,69 +102,11 @@
         <div class="small-12 large-12 columns">
           <div class="wd-section-project">
             <ul class="wd-section-portfolio small-block-grid-1 medium-block-grid-2 large-block-grid-3">
-              <li>
+              <li ng-repeat="item in itens">
                 <div class="image-wrapper overlay-slide-in-left">
                   <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
                   <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>CHURRASQUEIRA</h2></a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>FRRITADEIRAS</h2></a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>FOGOES</h2></a>
-                  </div>
-                </div>
-
-              </li>
-              <li>
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>GRELHAS</h2></a>
-                  </div>
-                </div>
-
-              </li>
-              <li>
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>ESPETOS</h2></a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>FORNO </h2></a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>FOGAO</h2></a>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="single-portfolio.html"><h2>CHAPEIRAS</h2></a>
+                    <a href="produtos.html?subcategoria={{ item.id }}"><h2>{{ item.descricao_categoria }}</h2></a>
                   </div>
                 </div>
               </li>
@@ -258,6 +199,7 @@
   </footer>
 </section>
     <!-- End Footer -->
+    <script src="bower_components/angular/angular.js"></script>
     <script src="js/angular-controller/subcategoria-controller.js"></script>
     <script src="js/extras.js"></script>
     <script src="js/jquery-1.12.3.min.js"></script>
